[gd_scene load_steps=9 format=3 uid="uid://cj81syvnw6xwu"]

[ext_resource type="Texture2D" uid="uid://d371k01yr3tnt" path="res://Hud/moneda_icon.png" id="1_610e0"]
[ext_resource type="Texture2D" uid="uid://cuijjxnf4byw7" path="res://Hud/sol_icon.png" id="2_6xql6"]
[ext_resource type="Texture2D" uid="uid://dbvx87jympl2g" path="res://Hud/luna_icon.png" id="3_dyogf"]
[ext_resource type="Script" uid="uid://e0uaqisdx5ng" path="res://scripts/HudController.gd" id="3_qyobh"]
[ext_resource type="FontFile" uid="uid://drjw2cvbeghlx" path="res://Main_menu/Roboto-Black.ttf" id="4_6xql6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xql6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyogf"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.896075, 0.8091, 0.13473, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyobh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Hud" type="Node3D"]
script = ExtResource("3_qyobh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DineroContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 210.0
offset_bottom = 230.0

[node name="MonedaIcon" type="TextureRect" parent="CanvasLayer/DineroContainer"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 150.0
texture = ExtResource("1_610e0")
expand_mode = 2

[node name="DineroLabel" type="Label" parent="CanvasLayer/DineroContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -60.0
offset_right = 19.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6xql6")
theme_override_font_sizes/font_size = 50
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiaNocheContainer" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -750.0
offset_top = 30.0
offset_right = 750.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6xql6")

[node name="Sol" type="TextureRect" parent="CanvasLayer/DiaNocheContainer"]
layout_mode = 1
offset_right = 117.0
offset_bottom = 101.0
texture = ExtResource("2_6xql6")
expand_mode = 1

[node name="Luna" type="TextureRect" parent="CanvasLayer/DiaNocheContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -117.0
offset_bottom = 101.0
grow_horizontal = 0
texture = ExtResource("3_dyogf")
expand_mode = 1

[node name="PedidosPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -352.0
offset_top = 30.0
offset_right = -15.0
offset_bottom = 450.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_dyogf")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PedidosPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -137.5
offset_right = 89.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PEDIDOS" type="Label" parent="CanvasLayer/PedidosPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6xql6")
theme_override_font_sizes/font_size = 50
text = "PEDIDOS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_right = 1000.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qyobh")
